Revision history for Sys-Syslog

0.28 -- 2009.02.xx -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] CPAN-RT#56084: Reset connection tracking vars (Vladimir Marek).
        [FEATURE] New API for setlogsock(), in order to allow the setting
        of new options. Thanks to Jake Scott for the idea.
        [CODE] Modify can_load() so it can print the warnings if desired.
        [CODE] CPAN-RT#44410: Provide fallback macros in Syslog.xs in
        order to compile on Novell Netware.
        [TESTS] In blead, the distribution was moved from ext/Sys/Syslog
        to ext/Sys-Syslog. t/constants.t had to be fixed (Vincent Pit).
        [TESTS] CPAN-RT#53317: In core, Sys-Syslog was moved to cpan/, thus
        making t/constants.t unable to find macros.all (David Mitchell).
        [TESTS] CPAN-RT#64716: Skip t/data-validation.t if the available
        version of POE::Component::Server::Syslog is too old.
        [DIST] Bleadperl no longer require an empty MAN3PODS (Nicholas Clark).
        [DIST] Removed unneeded modules in Makefile.PL (Nicholas Clark).
        [DOC] Recreated Sys::Syslog history from the unified git repository.
        [DOC] Added a section to list the matching Perl and Sys::Syslog version.
        [DOC] CPAN-RT#49859: Removed a dead link (Leon Brocard).

0.27 -- 2008.09.21 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] Fixed compilation on Win32, thanks to Serguei Trouchelle.
        Also added stubs so calling the XS functions will never fail.
        [TESTS] t/pod.t now also uses Pod::Checker.

0.26 -- 2008.06.16 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] Make Sys::Syslog works with Perl 5.10.0 (because of 
        ExtUtils::Constant::ProxySubs).
        [CODE] setlogsock() is now a little more strict about its arguments.

0.25 -- 2008.05.17 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] CPAN-RT#34691: Fixed an incorrect call to sysopen() which
        prevented Sys::Syslog from working on some Solaris systems. 